Fix flickering annually fields on chrome/firefox

--- a/asset/css/schedule-element.less
+++ b/asset/css/schedule-element.less
@@ -85,6 +85,10 @@
         &:hover {
           background-color: @schedule-element-fields-hover-bg;
         }
+
+        &:focus {
+          outline: none;
+        }
       }
 
       input:checked + label {
